<resources>
    <string name="app_name">HimalayaMT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="previous_data_upload">Please Upload Previous Data First</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_enter_username">Please enter username</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="select">Select</string>
    <string name="Opening_Stock_Cold_Room">Cold room - Opening stk</string>
    <string name="Opening_Stock_Mccain_Df">Mccain DF - Opening stk</string>
    <string name="Total_Facing_McCain_DF">Mccain DF - Total Facing</string>
    <string name="Opening_Stock_Store_DF">Store DF - Opening stk</string>
    <string name="Total_Facing_Store_DF">Store DF - Total Facing</string>
    <string name="As_Per_Mccain">As Per Mccain</string>
    <string name="actual_listed">Actual listed</string>
    <string name="prompt_userid">Username</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="Material_wellness_thawed_quantity">Thawed Qty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="stock_under_days">Stock under 45 days of Expiry</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="remark">Remarks</string>
    <string name="image">Image</string>
    <string name="save">SAVE</string>
    <string name="brand">Brand</string>
    <string name="sku">Sku</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="closed">Close</string>
    <string name="menu_daily_route_plan">Daily Route Plan</string>
    <string name="menu_daily_download">Daily Data Download</string>
    <string name="menu_upload_data">Upload Data</string>
    <string name="menu_geotag">Geo Tag</string>
    <string name="menu_export">Data Export</string>
    <string name="enter_the_values">Enter the values</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_services">Services</string>
    <string name="ok">OK</string>
    <string name="entry_already_exist">This entry already exist!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quiz_tabbed">QuizTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
