<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="20dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="5dp"
                android:text="@string/sku"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_background"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_brand"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/brand" />

                <Spinner
                    android:id="@+id/spinner_brand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_background"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/sku" />

                <Spinner
                    android:id="@+id/spinner_sku"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_background"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/et_stock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:maxLength="5" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_background"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/closed" />

                </LinearLayout>


            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_sku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_background"></android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!-- <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:padding="10dp"
         card_view:cardBackgroundColor="@color/colorOrange"
         card_view:cardCornerRadius="20dp"

         >
     <LinearLayout
         android:id="@+id/list_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="95"
         android:visibility="gone"
         >

         <ListView
             android:id="@+id/lv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:cacheColorHint="#00000000"

             android:choiceMode="singleChoice"
             android:divider="#ff9933"
             android:dividerHeight="2dp"
             android:fastScrollEnabled="true"
             android:smoothScrollbar="true"></ListView>
     </LinearLayout>
     </android.support.v7.widget.CardView>-->
</LinearLayout>
